[build-dependencies]
serde = { features = ['derive'], version = '1.0.219' }
serde_json = '1.0.140'


[dependencies]
console_error_panic_hook = '0.1.7'
gloo-net = '0.6.0'
icons = { features = ['leptos'], version = '0.18.0' }
leptos = { default-features = false, version = '0.8.19' }
leptos_meta = { default-features = false, version = '0.8.5' }
leptos_router = { default-features = false, version = '0.8.11' }
leptos_ui = '0.3.22'
serde = { features = ['derive'], version = '1.0.219' }
serde_json = '1.0.140'
strum = "0.28.0"
tw_merge = { features = ['variant'], version = '0.1.17' }
wasm-bindgen = '0.2.118'
web-sys = "0.3.95"


[dev-dependencies]
console_log = '1.0'
log = '0.4.22'


[features]
default = ['csr']
csr = ['leptos/csr']


[lib]
crate-type = ['cdylib', 'rlib']


[package]
edition = '2024'
name = 'aekasitt-github-io'
publish = false


[profile.dev]
debug = 'line-tables-only'


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'


[package.metadata.leptos]
assets-dir = 'assets'
browserquery = 'defaults'
lib-features = ['csr']
output-name = 'blog'
site-pkg-dir = 'pkg'
site-root = 'target/site'
