[build-dependencies]
charming = { features = ['ssr'], version = '0.6.0' }
chrono = { features = ['serde'], version = '0.4.44' }
markdown-frontmatter = '0.5.1'
serde = { features = ['derive'], version = '1.0.219' }
serde_json = '1.0.140'


[dependencies]
console_error_panic_hook = '0.1.7'
futures-util = '0.3.32'
gloo-net = { default-features = false, features = ['http'], version = '0.6.0' }
js-sys = '0.3.103'
leptos = { default-features = false, version = '0.8.19' }
leptos-md = '0.1.0'
leptos_meta = { default-features = false, version = '0.8.5' }
leptos_router = { default-features = false, version = '0.8.11' }
leptos_ui = '0.3.22'
nanoserde = { default-features = false, features = ['json'], version = '0.2' }
strum = { features = ['derive'], version = '0.28.0' }
tw_merge = { features = ['variant'], version = '0.1.17' }
wasm-bindgen = '0.2.123'
wasm-bindgen-futures = '0.4.76'
web-sys = { features = ['TextDecoder'], version = '0.3.95' }


[features]
default = ['csr']
csr = ['leptos/csr']


[lib]
crate-type = ['cdylib', 'rlib']


[lints.rust]
dead_code = 'allow'
unused_imports = 'allow'
unused_variables = 'allow'


[package]
build = 'build/main.rs'
edition = '2024'
name = 'aekasitt-github-io'
publish = false


[profile.dev]
debug = 'line-tables-only'


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'


[package.metadata.leptos]
assets-dir = 'assets'
browserquery = 'defaults'
lib-features = ['csr']
output-name = 'blog'
site-pkg-dir = 'pkg'
site-root = 'target/site'
